; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/~attic/pc/extr_main.c_CloseStuff.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/~attic/pc/extr_main.c_CloseStuff.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [46 x i8] c"\0ASignal %d has been caught and dealt with...\0A\00", align 1
@.str.1 = private unnamed_addr constant [28 x i8] c"How DARE you interrupt me!\0A\00", align 1
@.str.2 = private unnamed_addr constant [27 x i8] c"MUST TERMINATE ALL HUMANS\0A\00", align 1
@.str.3 = private unnamed_addr constant [35 x i8] c"Reach out and hang-up on someone.\0A\00", align 1
@.str.4 = private unnamed_addr constant [54 x i8] c"The pipe has broken!  Better watch out for floods...\0A\00", align 1
@.str.5 = private unnamed_addr constant [72 x i8] c"Iyeeeeeeeee!!!  A segmentation fault has occurred.  Have a fluffy day.\0A\00", align 1
@.str.6 = private unnamed_addr constant [38 x i8] c"I told you to be nice to the driver.\0A\00", align 1
@.str.7 = private unnamed_addr constant [60 x i8] c"Those darn floating points.  Ne'er know when they'll bite!\0A\00", align 1
@.str.8 = private unnamed_addr constant [45 x i8] c"Don't throw your clock at the meowing cats!\0A\00", align 1
@.str.9 = private unnamed_addr constant [29 x i8] c"Abort, Retry, Ignore, Fail?\0A\00", align 1
@.str.10 = private unnamed_addr constant [37 x i8] c"Killing your processes is not nice.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @CloseStuff to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CloseStuff(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = call i32 (...) @DriverKill()
  %4 = load i32, i32* %2, align 4
  %5 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0), i32 %4)
  %6 = load i32, i32* %2, align 4
  switch i32 %6, label %27 [
    i32 133, label %7
    i32 130, label %9
    i32 134, label %11
    i32 132, label %13
    i32 131, label %15
    i32 136, label %17
    i32 135, label %19
    i32 137, label %21
    i32 138, label %23
    i32 129, label %25
    i32 128, label %25
  ]

7:                                                ; preds = %1
  %8 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0))
  br label %27

9:                                                ; preds = %1
  %10 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.2, i64 0, i64 0))
  br label %27

11:                                               ; preds = %1
  %12 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.3, i64 0, i64 0))
  br label %27

13:                                               ; preds = %1
  %14 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str.4, i64 0, i64 0))
  br label %27

15:                                               ; preds = %1
  %16 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([72 x i8], [72 x i8]* @.str.5, i64 0, i64 0))
  br label %27

17:                                               ; preds = %1
  %18 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.6, i64 0, i64 0))
  br label %27

19:                                               ; preds = %1
  %20 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([60 x i8], [60 x i8]* @.str.7, i64 0, i64 0))
  br label %27

21:                                               ; preds = %1
  %22 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.8, i64 0, i64 0))
  br label %27

23:                                               ; preds = %1
  %24 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.9, i64 0, i64 0))
  br label %27

25:                                               ; preds = %1, %1
  %26 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.10, i64 0, i64 0))
  br label %27

27:                                               ; preds = %1, %25, %23, %21, %19, %17, %15, %13, %11, %9, %7
  %28 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @DriverKill(...) #1

declare dso_local i32 @printf(i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
